# neso-calibration

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  genindex.html  index.html  nesopy.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  nesopy.doctree
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/nesopy/: model.html  output.html
_sources/: nesopy.rst.txt
docker/: Dockerfile  README.md
docker/gcc/: Dockerfile
docker/oneapi/: Dockerfile
docs/: conf.py  index.rst
examples/two_stream/: docker_example.ipynb  native_example.ipynb  pyvbmc_calibration_example.ipynb  session.xml
src/nesopy/: __init__.py  model.py  output.py
tests/: test_model.py
